# PatientDedupe

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.fhir  README.md
.github/workflows/: deploy-fhir-space.yml  deploy-space.yml  tests.yml
analytics/: README.md  docker-compose.yml  hadoop.env  pom.xml  run-cluster.sh  run-local.sh
backend/: .env.example  docker-compose.yml  package-lock.json  package.json  schema.sql  tsconfig.json  vitest.config.ts
backend/src/: db.ts  engine.ts  merge.ts  migrate.ts  seed.ts  server.ts  survivorship.ts  types.ts
backend/tests/: api.test.ts  blocking.test.ts  engine.test.ts  fixture.ts  globalSetup.ts
deploy/: README.fhir-space.md  README.space.md
e2e/: global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts
e2e/tests/: a11y.spec.ts  console.spec.ts
engine/: CMakeLists.txt
engine/bench/: benchmark.cpp
engine/include/patientdedupe/: matcher.hpp  metrics.hpp  nicknames.hpp
engine/scripts/: build-wasm.sh
engine/src/: cli.cpp  eval.cpp  matcher.cpp  metrics.cpp  nicknames.cpp
engine/tests/: test_matcher.cpp  test_metrics.cpp
engine/wasm/: bindings.cpp  c_abi.cpp
fhir/: pom.xml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: README.md
frontend/src/: App.tsx  main.tsx  presets.ts  styles.css
sql/: blocking_candidates.sql  blocking_probe.sql  blocking_setup.sql
tools/: duplicate_injector.py
tools/eval/: baseline.py  duplicate_injector.py
tools/screenshots/: capture-app.mjs  (+4 more)
web/: README.md  index.html
(+61 files in other folders)
